--- a/English-for-kids/main.html
+++ b/English-for-kids/main.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/CSS/style.css">
-    <script src="/static/JS/main_script.js"></script>
+    <link rel="stylesheet" href="./static/CSS/style.css">
+    <script src="./static/JS/main_script.js"></script>
     <title>Document</title>
     
 </head>
